# mdt-cmake-modules

./: .gitignore  .gitlab-ci.yml  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  INSTALL.md  LICENSE  MdtCMakeModulesConfig.cmake.in  README.md  TODO.md  appveyor.yml  conanfile.py  linux_clang6.0_x86_64_libc++_toolchain.cmake  mdt_cmake_modules-conan-cmake-modules.cmake
Modules/: AddQt5ToCMakePrefixPath.cmake  MdtAddLibrary.cmake  MdtAddTest.cmake  MdtBuildOptionsUtils.cmake  MdtConanBuildInfoReader.cmake  MdtFindPathInList.cmake  MdtFindPathInList.cmake.in  (+17 more)
doc/: CMakeLists.txt  ConanAndCMake.rst  index.rst
doc/Modules/: AddQt5ToCMakePrefixPath.rst  FindSphinx.rst  MdtAddLibrary.rst  MdtAddTest.rst  MdtBuildOptionsUtils.rst  MdtConanBuildInfoReader.rst  MdtFindPathInList.rst  MdtGitTag.rst  MdtIniFileReader.rst  MdtInstallCMakeModules.rst  MdtInstallDirs.rst  MdtInstallExecutable.rst  MdtInstallIncludes.rst  MdtInstallLibrary.rst  MdtInstallMdtLibrary.rst  MdtInstallNamespacePackageConfigFile.rst  MdtInstallPackageConfigFile.rst  MdtPackageConfigHelpers.rst  MdtRuntimeEnvironment.rst  MdtSanitizers.rst  MdtTargetDependenciesHelpers.rst  MdtTargetPackageProperties.rst  MdtTargetProperties.rst  MdtVersionUtils.rst  mdt-modules.7.rst  sandbox.rst
doc/sphinx/: conf.py.in
tests/: CMakeLists.txt  conan.cmake
tests/GlIssue07_TestEnvPath/TableEditor_Conan_CMakeDeps/: CMakeLists.txt  conanfile.txt
tests/GlIssue07_TestEnvPath/TableEditor_Conan_CMakeDeps/src/: CMakeLists.txt  main.cpp
tests/GlIssue07_TestEnvPath/TableEditor_Conan_CMakeDeps/tests/: CMakeLists.txt
tests/GlIssue08_InstallLibWithObject/: CMakeLists.txt  MyLib.cpp  MyLibImpl.cpp
tests/GlIssue12_TargetFilePath/app/: CMakeLists.txt  conanfile.txt  main.cpp
tests/GlIssue12_TargetFilePath/libA/: CMakeLists.txt  conanfile.py
tests/GlIssue12_TargetFilePath/libA/src/: CMakeLists.txt
tests/GlIssue12_TargetFilePath/libA/src/Mdt/LibA/: LibA.cpp  LibA.h
tests/GlIssue4CoreTestLibDomain/: CMakeLists.txt
tests/GlIssue4CoreTestLibDomain/libs/Core/src/: CMakeLists.txt  Core.cpp  Core.h
tests/GlIssue4CoreTestLibDomain/libs/Core/tests/: CMakeLists.txt
tests/GlIssue4CoreTestLibDomain/libs/Core/tests/src/: CoreTest.cpp
tests/GlIssue4CoreTestLibDomain/libs/Domain/src/: CMakeLists.txt  Domain.cpp  Domain.h
tests/GlIssue4CoreTestLibDomain/libs/TestLib/src/: CMakeLists.txt  TestLib.cpp  TestLib.h
tests/MdtFindPathInList/Usage/: CMakeLists.txt
tests/MdtFindPathInList/UsageInPackageConfig/: CMakeLists.txt  MyLibConfig.cmake.in
tests/MdtInstallCMakeModules_custom/MdtDeployUtils/: CMakeLists.txt  Mdt0DeployUtilsConfig.cmake.in
tests/MdtInstallCMakeModules_custom/MdtDeployUtils/Modules/: ModuleA.cmake
tests/MdtInstallCMakeModules_custom/user/: CMakeLists.txt
tests/MultiDevTools/: CMakeLists.txt
tests/MultiDevTools/libs/Core/src/: CMakeLists.txt
tests/MultiDevTools/libs/Core/src/Mdt/Core/: Algorithm.cpp  Algorithm.h
tests/MultiDevTools/libs/Core/tests/: CMakeLists.txt
tests/MultiDevTools/libs/Core/tests/src/: AlgorithmTest.cpp
tests/MultiDevTools/libs/ItemEditor/src/: CMakeLists.txt
tests/MultiDevTools/libs/ItemEditor/src/Mdt/ItemEditor/: SortSetupWidget  SortSetupWidget.cpp
tests/MultiDevTools/libs/ItemEditor/tests/src/: SortSetupWidgetTest.cpp
tests/MultiDevTools/libs/ItemModel/src/: CMakeLists.txt
tests/MultiDevTools/libs/ItemModel/src/Mdt/ItemModel/: SortProxyModel.h
tests/MultiDevTools/libs/ItemModel/tests/: CMakeLists.txt
tests/Sanitizers/: CMakeLists.txt
tests/Sanitizers/src/: CMakeLists.txt  main.cpp
tests/Sanitizers/tests/: CMakeLists.txt
tests/TableEditorGlIssue4/: CMakeLists.txt
tests/TableEditorGlIssue4/libs/: CMakeLists.txt
tests/TableEditorGlIssue4/libs/TableEditorHelpers/src/: CMakeLists.txt  TableEditorHelpers.cpp  TableEditorHelpers.h
tests/TableEditorGlIssue4/libs/TableEditorHelpers/tests/: CMakeLists.txt
tests/TableEditorGlIssue4/libs/TableEditorHelpers/tests/src/: TableEditorHelpersTest.cpp
tests/apps/Hello/: CMakeLists.txt  conanfile.txt
tests/apps/Hello/src/: CMakeLists.txt  main.cpp
tests/apps/Hello/tests/: CMakeLists.txt
tests/apps/HelloCompileOptions/: CMakeLists.txt
tests/apps/HelloCompileOptions/src/: CMakeLists.txt
tests/apps/HelloCompileOptions/tests/: CMakeLists.txt
tests/apps/TableEditor/: CMakeLists.txt  conanfile.txt
tests/apps/TableEditor/src/: CMakeLists.txt  main.cpp
tests/apps/TableEditor/tests/: CMakeLists.txt
tests/apps/TableEditorUserProject/: CMakeLists.txt
tests/apps/TableEditor_Mdt/: CMakeLists.txt
tests/apps/TableEditor_Mdt/src/: CMakeLists.txt
tests/apps/TableEditor_Mdt/tests/: CMakeLists.txt
tests/libs/HeaderOnly/: CMakeLists.txt  conanfile.py
tests/libs/HeaderOnly/src/: CMakeLists.txt
tests/libs/HeaderOnly/src/Mdt/HeaderOnly/: Algorithm.h
tests/libs/HeaderOnly/tests/: CMakeLists.txt
tests/libs/HeaderOnly/tests/src/: AlgorithmTest.cpp
tests/libs/ItemEditor/: CMakeLists.txt  conanfile.py
tests/libs/ItemEditor/src/: CMakeLists.txt
tests/libs/ItemEditor/src/Mdt/ItemEditor/: SortSetupWidget.cpp  SortSetupWidget.h
tests/libs/ItemEditor/tests/: CMakeLists.txt
tests/libs/ItemModel/: CMakeLists.txt  conanfile.py
tests/libs/ItemModel/src/: CMakeLists.txt
tests/libs/ItemModel/src/Mdt/ItemModel/: SortProxyModel  SortProxyModel.cpp  SortProxyModel.h
tests/libs/ItemModel/tests/src/: SortProxyModelTest.cpp
tests/src/: hello.cpp
tests/static/: CMakeLists.txt
tests/static/MdtConanBuildInfoReader/: CMakeLists.txt  conanbuildinfo.txt
tests/static/MdtFindPathInList/: CMakeLists.txt
tests/static/MdtIniFileReader/: CMakeLists.txt  common.txt  onesection.txt
tests/static/MdtRuntimeEnvironment/: CMakeLists.txt
tests/static/MdtRuntimeEnvironment/Linux/: CMakeLists.txt  conanbuildinfo.txt
tests/static/MdtRuntimeEnvironment/Windows/: CMakeLists.txt  conanbuildinfo.txt
tests/static/MdtTargetDependenciesHelpers/: CMakeLists.txt
tests/static/MdtTargetProperties/: CMakeLists.txt
tests/static/TestHelpers/: MdtListTestHelpers.cmake
tests/static/sandbox/: CMakeLists.txt
(+10 files in other folders)
